# taker

./: .gitignore  .gitmodules  .pyproject.toml.swp  Dockerfile  README.md  pyproject.toml  setup.sh
.github/workflows/: checks.yml
docs/: Makefile  conf.py  make.bat
docs/_build/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  taker.html
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree  taker.doctree
docs/_build/_sources/: index.rst.txt  modules.rst.txt  taker.rst.txt
examples/analysis/: imagenet-mini.py
examples/early-testing/: check_lm_eval.py  ln_grows.py  manual_prune.py  peft-testing.py  procrustes-it.py  procrustes-window.py  procrustes.py  quick_eval.py  sae_hook_gemma2b_mlp.py  sae_hook_gpt2_residual.py  sae_hook_layer_tests.py  sae_hook_layer_tests_sweep.py  sae_hook_mmlu.py  sae_hook_mmlu_attn.py  sae_hook_mmlu_res.py  sae_prune.py  sae_prune_gemma.py  sae_prune_gemma_attn.py  sae_prune_gemma_mlp.py  sae_prune_gpt2.py  sae_prune_gpt2_save_activations.py  sae_test_delete_me.py
examples/eloise/: mistral1.json  mistral2.json  mistral4.json  predictor_sk.py
examples/leace/: cifar.py  leace.py
examples/neuron-mapping/: activation_observations.py  compare.py  crossevaluate-mistral.py  crossevaluate.py  crossevaluation_results.py  generate_extra_tensors.py  mistral-log.txt  plot.py  prune_repos.py  reevaluate.py  test.py
examples/neuron-mapping/saved_tensors/15M/: bio-pile-15M-2024-02-03_16:22:02.pt  bio-pile-15M-2024-02-03_16:52:10.pt  bio-pile-15M-2024-02-03_17:07:07.pt  bio-pile-15M-2024-02-03_19:36:19.pt  bio-pile-15M-2024-02-03_19:45:15.pt  bio-pile-15M-2024-02-03_19:51:11.pt  bio-pile-15M-recent.pt  biology-pile-15M-2024-02-03_20:12:49.pt  biology-pile-15M-2024-02-03_20:28:26.pt  biology-pile-15M-2024-02-03_20:36:58.pt  biology-pile-15M-2024-02-03_20:45:22.pt  biology-pile-15M-2024-02-03_20:53:41.pt  biology-pile-15M-2024-02-03_21:02:30.pt  biology-pile-15M-2024-02-03_21:10:46.pt  biology-pile-15M-recent.pt  chemistry-pile-15M-2024-02-03_20:15:32.pt  chemistry-pile-15M-2024-02-03_20:30:54.pt  chemistry-pile-15M-2024-02-03_20:39:21.pt  chemistry-pile-15M-2024-02-03_20:47:45.pt  chemistry-pile-15M-2024-02-03_20:56:03.pt  chemistry-pile-15M-2024-02-03_21:04:53.pt  chemistry-pile-15M-2024-02-03_21:13:10.pt  code-pile-15M-recent.pt  (+65 more)
examples/pruning/: prune_30.py  prune_vit.sh  simplistic_prune.py
examples/quant-compare/: check_lm_eval.py  check_lm_eval_quant.py  quant_compare.py  run_lm_eval_quant.sh  test_ppl.py
src/taker/: activations.py  data_classes.py  eval.py  hooks.py  model.py  model_maps.py  model_minimal.py  model_old.py  model_repos.py  nn.py  prune.py  texts.py  vit_processor.py
tests/: test_attention_mask.py  test_attn_utils.py  test_collection.py  test_datasets.py  test_delete_attn_pre_out_layer.py  test_delete_ff_and_evaluate.py  test_delete_ff_keys.py  test_evaluate_all.py  test_hook_classes.py  test_hook_handles.py  test_hook_usage.py  test_nn_utils.py  test_offsets.py  test_peft_tuning.py  test_prune_and_evaluate.py  test_run_data_history.py  test_z_datasets.py
(+199 files in other folders)
