[tool.poetry]
name = "taker"
version = "1.0.9"
description = "Tools for Transformer Activations Knowledge ExtRaction"
authors = ["Nicky Pochinkov"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/nickypro/taker"

[tool.poetry.dependencies]
python = ">=3.9"
torch = "^2.0.0"
numpy = "^1.23"
pandas = "^1.5.3"
scipy = "^1.11.1"
welford-torch = "^0.2.4"
numexpr = "^2.7.0"
accelerate = "^0.31.0"
transformers = "^4.41.0"
tokenizers = "^0.19.1"
sentencepiece = "^0.1.99"
datasets = "^2.9.0"
evaluate = "^0.4.0"
zstandard = "^0.19.0"
einops = "^0.6.0"
wandb = "^0.17.6"
lm-eval = "^0.4.3"
antlr4-python3-runtime = "4.11.1" # required for lm-eval

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
ipywidgets = "^8.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
matplotlib = "^3.6.3"
seaborn = "^0.13.2"
bokeh = "3.0.*,>=2.4.2"
scikit-learn = "^1.4.2"
mypy = "^0.991"
autopep8 = "^2.0.1"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
ansible = "^8.4.0"
phate = "^1.0.11"
umap-learn = "^0.5.6"
quanto = "^0.2.0"
bitsandbytes = "^0.40.2"
hqq = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
